# web-scrape-ai

./: .env  .gitignore  AGENTS.md  CLAUDE.md  DASHBOARD_REFACTOR_STATUS.md  README.md  TUNING_NOTES.txt  docker-compose.yml  gemma.md  pyproject.toml  restart-dashboard.sh  scraper_integration_schema.md  settings.yml
job-scraper/: README.md  TUNING_NOTES.txt  jobs.txt  pyproject.toml
job-scraper/api/: README.md  scraping_handlers.py
job-scraper/dashboard/: index.html  server.py
job-scraper/docs/: 2026-04-18-scraper-freshness-design.md  2026-04-18-scraper-freshness-plan.md  2026-04-18-scraper-freshness-progress.md  CONSULTANT_BRIEF.md  DEPLOYMENT.md  ENGINES.md  REMEDIATION_BASELINE.md  SCRAPING_PROCESS.md  scraper-freshness-changes.html
job-scraper/job_scraper/: __init__.py  __main__.py  board_discovery.py  config.default.yaml  config.py  crawler.py  db.py  dedup.py  fetcher.py  filters.py  fingerprints.py  items.py  llm_reviewer.py  models.py  runtime_controls.py  salary_policy.py  scrape_profile.py  searcher.py  settings.py  tiers.py  urlnorm.py  usajobs.py  watchers.py
job-scraper/scripts/: migrate_v1_to_v2.py
job-scraper/tests/: test_aggregator_spider.py  test_ashby_json_migration.py  test_ashby_spider.py  test_board_discovery.py  test_config.py  test_db.py  test_discovery_alternation.py  test_fingerprints.py  test_generic_spider.py  test_greenhouse_json_migration.py  test_greenhouse_spider.py  test_hn_hiring_spider.py  test_lever_json_migration.py  test_llm_relevance.py  test_pipeline_stats_integration.py  test_pipelines.py  test_remoteok_spider.py  (+13 more)
(+455 files in other folders)
