[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-scraper"
version = "2.0.0"
description = "Job discovery via Scrapy + Playwright"
requires-python = ">=3.10"
dependencies = [
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.40",
    "trafilatura>=1.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
job-scraper = "job_scraper.__main__:app"

[tool.setuptools.packages.find]
include = ["job_scraper*"]
